# code

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  deny.toml  justfile  openapitools.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
components/: README.md  eslint.config.js  index.html  package.json  (+6 more)
libs/service-bootstrap/: Cargo.toml  build.rs
libs/service-bootstrap-build/: Cargo.toml
libs/service-bootstrap-build/src/: builder.rs  lib.rs
libs/service-bootstrap-build/src/generator/: mod.rs  server.rs
libs/service-bootstrap/src/: config.rs  lib.rs  o2o_helper.rs
libs/service-bootstrap/src/grpc/: boxed.rs  client.rs  mod.rs
libs/service-bootstrap/src/grpc/server/: codegen.rs  dispatcher.rs  mod.rs  module.rs  tracing.rs
libs/service-bootstrap/src/http/: handler.rs  mod.rs
libs/service-bootstrap/src/nats/: mod.rs  opentelemetry.rs  typed_payload.rs
libs/service-bootstrap/src/nats/listener/: dlq.rs  mod.rs  module.rs  owned_info.rs  retry.rs  typed_message.rs
libs/service-bootstrap/src/nats/listener/handler/: boxed.rs  mod.rs
libs/service-bootstrap/src/nats/publisher/: mod.rs  module.rs  publish.rs  typed_message.rs
libs/service-bootstrap/src/tracing_init/: alert_manager.rs  metrics.rs  mod.rs  otel.rs
libs/service-bootstrap/src/utils/: hash_string.rs  mod.rs  nats_model_id.rs  rorm.rs
services/bnv-manager-v2/mailcow/: Cargo.toml
services/bnv-manager-v2/mailcow/src/: error.rs  lib.rs  utils.rs
services/bnv-manager-v2/mailcow/src/domain_admins/: mod.rs  schema.rs
services/bnv-manager-v2/mailcow/src/domains/: mod.rs  schema.rs
services/bnv-manager-v2/mailcow/src/mailboxes/: mod.rs  schema.rs
services/bnv-manager-v2/mailcow/src/status/: mod.rs  schema.rs
services/bnv-manager-v2/webserver/: Cargo.toml
services/bnv-manager-v2/webserver/migrations/: 0001_initial.toml
services/bnv-manager-v2/webserver/src/: cli.rs  config.rs  main.rs  tracing.rs
services/bnv-manager-v2/webserver/src/http/: mod.rs  server.rs
services/bnv-manager-v2/webserver/src/http/extractors/: mod.rs  session_user.rs
services/bnv-manager-v2/webserver/src/http/handler_auth/: mod.rs
services/bnv-manager-v2/webserver/src/http/handler_auth/auth/: mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_auth/discovery/: mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_auth/jwks/: mod.rs
services/bnv-manager-v2/webserver/src/http/handler_auth/token/: mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_auth/userinfo/: mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_frontend/: mod.rs
services/bnv-manager-v2/webserver/src/http/handler_frontend/accounts/: handler_admin.rs  handler_club_admin.rs  mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_frontend/clubs/: handler_admin.rs  handler_club_admin.rs  mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_frontend/credential_reset/: handler_common.rs  mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_frontend/domains/: handler_admin.rs  mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_frontend/invites/: handler_admin.rs  handler_club_admin.rs  handler_common.rs  mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_frontend/me/: handler_common.rs  mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_frontend/oidc_provider/: handler_admin.rs  mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/handler_frontend/openapi/: handler_common.rs  mod.rs
services/bnv-manager-v2/webserver/src/http/handler_frontend/settings/: handler_common.rs  mod.rs  schema.rs
services/bnv-manager-v2/webserver/src/http/middlewares/: auth_club_admin.rs  auth_rate_limit.rs  auth_superadmin.rs  mod.rs
services/bnv-manager-v2/webserver/src/models/: mod.rs
services/bnv-manager-v2/webserver/src/models/account/: club_admin.rs  club_member.rs  db.rs  mod.rs  superadmin.rs
services/bnv-manager-v2/webserver/src/models/club/: db.rs  mod.rs
services/bnv-manager-v2/webserver/src/models/credential_reset/: db.rs  mod.rs
services/bnv-manager-v2/webserver/src/models/domain/: db.rs  mod.rs
services/bnv-manager-v2/webserver/src/models/invite/: db.rs  mod.rs
services/bnv-manager-v2/webserver/src/models/oidc_provider/: db.rs  mod.rs
services/bnv-manager-v2/webserver/src/modules/: mod.rs
services/bnv-manager-v2/webserver/src/modules/garbage_collector/: mod.rs  worker.rs
services/bnv-manager-v2/webserver/src/modules/mailcow/: app_passwords.rs  domain_stats_cache.rs  domain_stats_worker.rs  mod.rs  sync.rs
services/bnv-manager-v2/webserver/src/modules/oidc/: mod.rs
services/bnv-manager-v2/webserver/src/utils/: import.rs  links.rs  mod.rs  worker.rs
services/mail-gateway/: Cargo.toml  Dockerfile  build.rs
services/mail-gateway/src/: cli.rs  config.rs  main.rs  models.rs  proto.rs
services/mail-gateway/src/handler/: mod.rs  send_email.rs
services/mail-gateway/src/modules/: mod.rs  smtp.rs
services/semelei/: Cargo.toml  Dockerfile
services/semelei/migrations/: 0001_initial.toml  0002_item_image.toml  0003_item_additional_info.toml
services/semelei/src/: cli.rs  config.rs  main.rs
services/semelei/src/http/: mod.rs
services/semelei/src/http/handler_frontend/: mod.rs
services/semelei/src/http/handler_frontend/admin/: handler.rs  mod.rs  schema.rs
services/semelei/src/http/handler_frontend/auth/: handler.rs  mod.rs  schema.rs
services/semelei/src/http/handler_frontend/orders/: handler.rs  mod.rs  schema.rs
services/semelei/src/http/handler_frontend/shop/: handler.rs  mod.rs  schema.rs
services/semelei/src/http/middleware/: admin_required.rs  auth_required.rs  mod.rs  rate_limit.rs
services/semelei/src/models/: mod.rs
services/semelei/src/models/account/: db.rs  extractor.rs  mod.rs
services/semelei/src/models/category/: db.rs  mod.rs
services/semelei/src/models/item/: db.rs  mod.rs
services/semelei/src/models/order/: db.rs  mod.rs
services/semelei/src/modules/: mod.rs  webauthn.rs
(+365 files in other folders)
