[package]
name = "service-bootstrap-build"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Default crates to parse, process and output rust code
proc-macro2 = "1.0" # Token trees
quote = "1.0" # Templating engine for token tress
syn = "2.0" # Full AST
prettyplease = { version = "0.2" } # AST formatter

tonic-build = { version = "0.14.0" }
prost-build = { version = "0.14" }
prost-types = { version = "0.14" }
